# knowledge-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  WORKFLOW.md  pyproject.toml
.codex/: README.md  config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml
config/: inference.yaml  pipeline.yaml
config/source-packs/: rockwell-pump-station-control-stack.yaml
data/: README.md
docs/: agent-workflow.md  architecture.md  bucket-taxonomy.md  codex-issue-runbook.md  evals.md  extraction-schemas.md  inference-layer.md  linear-tracker.md  publish-contract.md  repo-structure.md  roadmap.md
src/knowledge_forge/: __init__.py  cli.py
src/knowledge_forge/bucketing/: __init__.py  assigner.py  taxonomy.py
src/knowledge_forge/compile/: __init__.py  contradiction_notes.py  overview_pages.py  source_pages.py  topic_pages.py
src/knowledge_forge/evaluation/: __init__.py  extraction_eval.py  parser_eval.py
src/knowledge_forge/extract/: __init__.py  contradiction.py  engine.py  provenance.py  repair.py  reviewability.py  runs.py
src/knowledge_forge/inference/: __init__.py  batch.py  client.py  config.py  cost.py  retry.py  (+3 more)
tests/: conftest.py  test_bucketing.py  test_compile.py  test_contradiction.py  test_extraction_eval.py  test_harness_cli.py  test_inference.py  test_intake_cli.py  test_manifest.py  test_normalize.py  test_package.py  test_parse.py  test_parser_eval.py  test_publish.py  test_sectioning.py  test_smoke.py
tests/fixtures/: README.md
tests/golden/: README.md
tests/test_extract/: test_engine.py  test_provenance.py  test_repair.py  test_runs.py  test_schemas.py
(+67 files in other folders)
