[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "knowledge-forge"
version = "0.1.0"
description = "Bootstrap package for the Knowledge Forge manual digestion pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1,<9",
  "docling",
  "jsonschema>=4,<5",
  "ocrmypdf",
  "openai",
  "prefect",
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4,<5",
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.11,<0.12",
]

[project.scripts]
knowledge-forge = "knowledge_forge.cli:cli"
kf = "knowledge_forge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_forge"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
